# mp_os

./: CMakeLists.txt  main.cpp
allocator/allocator_global_heap/include/: allocator_global_heap.h
allocator/allocator_global_heap/src/: allocator_global_heap  allocator_global_heap.cpp
arithmetic/: CMakeLists.txt
arithmetic/big_integer/: CMakeLists.txt
arithmetic/big_integer/include/: big_integer.h
arithmetic/big_integer/src/: big_integer.cpp
arithmetic/big_integer/tests/: CMakeLists.txt
associative_container/: CMakeLists.txt
associative_container/include/: associative_container.h
associative_container/search_tree/binary_search_tree/: CMakeLists.txt  CMakePresets.json
associative_container/search_tree/include/: search_tree.h
b_tree/: associative_container.h  b_tree.h  search_tree.h
data_base/include/: data_base.h
data_base/src/: data_base.cpp  main.cpp
interface/: interface.h
interface/schema/include/: schema.h
interface/schema/src/: schema.cpp
interface/schema_pool/include/: schema_pool.h
interface/schema_pool/src/: schema_pool.cpp
interface/table/include/: table.h
interface/table/src/: table.cpp
logger/: CMakeLists.txt
logger/client_logger/include/: client_logger.h  client_logger_builder.h
logger/client_logger/src/: client_logger.cpp  client_logger_builder.cpp
logger/client_logger/tests/: client_logger_tests.cpp
logger/logger/include/: logger.h
logger/logger/src/: logger.cpp
person_data/include/: person_data.h
person_data/src/: person_data.cpp
string_pool/include/: string_pool.h
string_pool/src/: string_pool.cpp
(+10 files in other folders)
